Refactoring using findbug hints